# Project-LVATT

./: .gitignore  .gitmodules  Building Liquid-dsp for windows.txt  CMakeLists.txt  CMakePresets.json  Project LVATT.sln  README.md
GNURadio Baseline Example/: Demonstration.grc  t82.grc  t82.py
LVATT/: CMakeLists.txt  LVATT.cpp
LVATT Testing/: LVATT Testing.vcxproj  LVATT Testing.vcxproj.filters  LVATT_Testing.cpp
LVATT Testing/Headers/: WAV.hpp
LVATT/Headers/: AudioTranscribing.hpp  Common.hpp  FileDownloading.hpp  SignalProcessing.hpp  WAV.hpp
LVATT/NosLib/: Byte.hpp  DynamicArray.hpp  String.hpp
Project LVATT/: Project LVATT.vcxproj  Project LVATT.vcxproj.filters  ProjectLVATT.cpp  ProjectLVATT.h  ProjectLVATT.qrc  ProjectLVATT.ui  main.cpp
